# CineRato

./: README.md
SistemaBilheteria/: CMakeLists.txt  bilhete.c  bilhete.h  bilheteria.c  bilheteria.h  main.c  menu.c  menu.h  utils.h
SistemaBilheteria/include/: common.h
SistemaBilheteria/include/controller/: reserva.h  storage.h
SistemaBilheteria/include/model/: bilhete.h  bilheteria.h
SistemaBilheteria/include/view/: menu_gerencial.h  menu_principal.h
SistemaBilheteria/src/controller/: reserva.c  storage.c
SistemaBilheteria/src/model/: bilhete.c  bilheteria.c
SistemaBilheteria/src/view/: menu.c  menu_gerencial.c  menu_principal.c  visual.c
SistemaBilheteria_com_debugs/include/controller/: storage.h
SistemaBilheteria_com_debugs/include/model/: bilhete.h  struct.h
SistemaBilheteria_com_debugs/include/view/: menu.h  menu_principal.h  visual.h
SistemaBilheteria_com_debugs/src/controller/: reserva.c  (+1 more)
SistemaBilheteria_finalversionNatanael/: CMakeLists.txt  main.c
SistemaBilheteria_finalversionNatanael/include/: common.h
SistemaBilheteria_finalversionNatanael/include/controller/: reserva.h  storage.h
SistemaBilheteria_finalversionNatanael/include/model/: bilhete.h  bilheteria.h  struct.h
SistemaBilheteria_finalversionNatanael/include/view/: menu.h  menu_gerencial.h  menu_principal.h  visual.h
SistemaBilheteria_finalversionNatanael/src/controller/: reserva.c
SistemaBilheteria_finalversionNatanael/src/model/: bilhete.c  bilheteria.c
SistemaBilheteria_finalversionNatanael/src/view/: menu.c  menu_gerencial.c  menu_principal.c  visual.c
(+6 files in other folders)
